--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.shestakov.pictureoftheday">
+
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
@@ -11,14 +12,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/DefaultTheme">
-        <activity android:name="com.shestakov.pictureoftheday.ui.MainActivity">
+        <activity android:name="com.shestakov.pictureoftheday.ui.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.shestakov.pictureoftheday.ui.MainActivity"/>
         <activity android:name="com.shestakov.pictureoftheday.ui.collapsing_toolbar.CollapsingToolbarActivity"/>
+        <activity android:name="com.shestakov.pictureoftheday.ui.recycler_activity.RecyclerActivity"/>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
